--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:worker": "tsc -b && vite build && wrangler deploy --dry-run",
+    "deploy": "tsc -b && vite build && wrangler deploy",
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write .",
@@ -58,6 +60,7 @@
     "tailwindcss": "^4.0.9",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "wrangler": "^4.30.0"
   }
 }
