--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "build:worker": "tsc -b && vite build && wrangler deploy --dry-run",
+    "build:worker": "tsc -p tsconfig.worker.json && vite build",
     "deploy": "tsc -b && vite build && wrangler deploy",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -46,6 +46,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250816.0",
     "@eslint/js": "^9.21.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/node": "^22.13.9",
