--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^12.4.10",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
+    "mimetext": "^3.0.27",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
