--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,10 @@ dist-ssr
 node_modules/
 dist/
 .env
- 
+
+# Generated files
+src/worker-voice/generated-index.ts
+
 # Yarn modern (v2+)
 .yarn/*
 !.yarn/patches
